manifests/media-server/ReferenceGrant-media-server-sfdr-me.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: media-server-sfdr-me
  namespace: media-server
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: network
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: network
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: network
  to:
    - group: ""
      kind: Service
