manifests/media-server/Deployment-seerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: media-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: seerr
  template:
    metadata:
      annotations:
        meta.queries.hash: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        meta.secret.hash: 03df47e003c1e477ba28263e0edcc827c5c3b8f4eda094485c42d73f391be298
      labels:
        app.kubernetes.io/name: seerr
    spec:
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "2000"
            - name: TZ
              value: Europe/Stockholm
            - name: UMASK
              value: "002"
            - name: DB_TYPE
              value: postgres
            - name: DB_HOST
              value: media-server-rw.media-server.svc.cluster.local
            - name: DB_USER
              value: seerr
            - name: DB_PASS
              valueFrom:
                secretKeyRef:
                  key: password
                  name: seerr
            - name: DB_NAME
              value: seerr
          image: ghcr.io/seerr-team/seerr:v3.3.0
          name: seerr
          volumeMounts:
            - mountPath: /app/config
              name: media-server-config
              subPath: seerr
      enableServiceLinks: false
      initContainers: []
      securityContext:
        fsGroup: 2000
      volumes:
        - name: media-server-config
          persistentVolumeClaim:
            claimName: media-server-config
