manifests/media-server/Deployment-sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      annotations:
        meta.queries.hash: 896337e277cdb9b8a4ded0c6688418517eb302a1d459d0f0048de2748565db0f
        meta.secret.hash: 03df47e003c1e477ba28263e0edcc827c5c3b8f4eda094485c42d73f391be298
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "2000"
            - name: TZ
              value: Europe/Stockholm
            - name: UMASK
              value: "002"
            - name: SONARR__AUTH__APIKEY
              valueFrom:
                secretKeyRef:
                  key: SONARR_API_KEY
                  name: media-server-secrets
            - name: SONARR__AUTH__METHOD
              value: External
            - name: SONARR__POSTGRES__HOST
              value: media-server-rw.media-server.svc.cluster.local
            - name: SONARR__POSTGRES__USER
              value: sonarr
            - name: SONARR__POSTGRES__PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: sonarr
            - name: SONARR__POSTGRES__MAINDB
              value: sonarr
            - name: SONARR__LOG__DBENABLED
              value: "False"
          image: linuxserver/sonarr:4.0.19
          name: sonarr
          volumeMounts:
            - mountPath: /config
              name: media-server-config
              subPath: sonarr
            - mountPath: /media/download
              name: media-server-download
            - mountPath: /media/anime
              name: media-server-anime
            - mountPath: /media/series
              name: media-server-series
      enableServiceLinks: false
      securityContext:
        fsGroup: 2000
      volumes:
        - name: media-server-config
          persistentVolumeClaim:
            claimName: media-server-config
        - name: media-server-download
          persistentVolumeClaim:
            claimName: media-server-download
        - name: media-server-anime
          persistentVolumeClaim:
            claimName: media-server-anime
        - name: media-server-series
          persistentVolumeClaim:
            claimName: media-server-series
        - configMap:
            name: sonarr-db-queries
          name: sonarr-db-queries
