manifests/media-server/Service-jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: jellyfin
  namespace: media-server
spec:
  ports:
    - name: http
      port: 8096
      targetPort: 8096
  selector:
    app.kubernetes.io/name: jellyfin
