manifests/media-server/Service-plex-lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    io.cilium/lb-ipam-ips: 192.168.1.151
  name: plex-lb
  namespace: media-server
spec:
  ports:
    - name: http
      port: 32400
      targetPort: 32400
  selector:
    app.kubernetes.io/name: plex
  type: LoadBalancer
