manifests/media-server/Service-plex.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: plex
  namespace: media-server
spec:
  ports:
    - name: http
      port: 32400
      targetPort: 32400
  selector:
    app.kubernetes.io/name: plex
