manifests/media-server/Service-prowlarr.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: prowlarr
  namespace: media-server
spec:
  ports:
    - name: http
      port: 9696
      targetPort: 9696
  selector:
    app.kubernetes.io/name: prowlarr
