manifests/media-server/Service-radarr.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: radarr
  namespace: media-server
spec:
  ports:
    - name: http
      port: 7878
      targetPort: 7878
  selector:
    app.kubernetes.io/name: radarr
