manifests/media-server/Service-sabnzbd.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: sabnzbd
  namespace: media-server
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: sabnzbd
