manifests/media-server/Service-seerr.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: seerr
  namespace: media-server
spec:
  ports:
    - name: http
      port: 5055
      targetPort: 5055
  selector:
    app.kubernetes.io/name: seerr
