manifests/media-server/Service-sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: sonarr
  namespace: media-server
spec:
  ports:
    - name: http
      port: 8989
      targetPort: 8989
  selector:
    app.kubernetes.io/name: sonarr
