manifests/media-server/Service-transmission.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: transmission
  namespace: media-server
spec:
  ports:
    - name: http
      port: 9091
      targetPort: 9091
  selector:
    app.kubernetes.io/name: transmission
