manifests/media-server/HTTPRoute-jellyfin-sfdr-me.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-sfdr-me
  namespace: network
spec:
  hostnames:
    - jellyfin.sfdr.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: sfdr-me
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jellyfin
          namespace: media-server
          port: 8096
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
