manifests/media-server/HTTPRoute-prowlarr-sfdr-me.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-sfdr-me
  namespace: network
spec:
  hostnames:
    - prowlarr.sfdr.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: sfdr-me
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: caddy
          namespace: auth-system
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
